--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,6 +73,9 @@ body {
 ._small-Top-Margin {
   margin-top: 10px !important;
 }
+._small-bottom-Margin {
+  margin-bottom: 10px !important;
+}
 ._border {
   border: 1px solid var(--light-grey-color);
 }
