--- a/src/app/public-modules/base/base.component.html
+++ b/src/app/public-modules/base/base.component.html
@@ -1,3 +1,1 @@
-<p>
-  base works!
-</p>
+<h4 class="_flex-box _justify-content-center _margin-top _primary-color">{{'message.unAuthorised' | translate}} </h4>
