--- a/src/app/modules/report/table/table.component.html
+++ b/src/app/modules/report/table/table.component.html
@@ -19,7 +19,7 @@
       </th>
       <td mat-cell *matCellDef="let row" style="padding-right: 15px">
         <mat-checkbox (click)="$event?.stopPropagation() ; selection.selected.length > limitSelection ? showMessage():null" (change)="$event ? toggleRow(row) : null"
-          [checked]="selection?.isSelected(row)" [disabled]="selection.selected.length > limitSelection" [aria-label]="checkboxLabel(row)" >
+          [checked]="selection?.isSelected(row)" [disabled]="(selection.selected.length > limitSelection) && !row.selected" [aria-label]="checkboxLabel(row)" >
         </mat-checkbox>
       </td>
     </ng-container>
