--- a/src/app/modules/workspace/add-program-meta-data/add-program-meta-data.component.html
+++ b/src/app/modules/workspace/add-program-meta-data/add-program-meta-data.component.html
@@ -33,7 +33,7 @@
         </div> -->
             <div class="formDiv">
                 <div class="col-xs-12 col-lg-4 col-md-4 col-sm-6 _margin-top" *ngFor="let program of programs">
-                    <mat-card class="solutionCard" [ngClass]="{'selectedProgram': selectedProgramTemplate?.title == program.title}" (click)="selectProgram(program)">
+                    <mat-card class="solutionCard col-xs-12" [ngClass]="{'selectedProgram': selectedProgramTemplate?.title == program.title}" (click)="selectProgram(program)">
                         <div class=" flex _justify-content-space-between">
                             <div class="cardheader">
                                 <i class="material-icons cardIcon">
@@ -42,7 +42,11 @@
                                 <h4>{{program.title}}</h4>
                             </div>
                             <!-- <mat-checkbox class="floatRight" (click)="insertSolution()"></mat-checkbox> -->
-
+                            <button mat-icon-button class="floatRight" (click)="$event?.stopPropagation();programDetails(program) ">
+                                <i class="material-icons cardIcon">
+                                    info
+                                </i>
+                            </button>
                         </div>
                         <div class="col-xs-8 col-xs-offset-2">
                             {{program.description}}
