--- a/src/app/modules/workspace/add-program-meta-data/add-program-meta-data.component.scss
+++ b/src/app/modules/workspace/add-program-meta-data/add-program-meta-data.component.scss
@@ -31,7 +31,7 @@
     white-space: nowrap;
   }
   .solutionCard {
-    height: 150px;
+    min-height: 150px;
   }
   .floatRight {
     float: right;
