--- a/src/app/modules/workspace/program-details/program-details.component.html
+++ b/src/app/modules/workspace/program-details/program-details.component.html
@@ -29,8 +29,25 @@
     </mat-chip-list>
 
     <h5 class="_margin-top">Solutions for Programs</h5>
-
-    <div class="col-xs-12 col-lg-4 col-md-4 col-sm-6 _margin-top" *ngFor="let solution of metaData.solutions">
+    <div class="col-xs-12">
+        <table mat-table 
+        [dataSource]="metaData.solutions" multiTemplateDataRows
+        class="mat-elevation-z8">
+    <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay" >
+     <th mat-header-cell *matHeaderCellDef> {{column | camelcase}} </th>
+     <td mat-cell *matCellDef="let element" > {{element[column]}} </td>
+    </ng-container>
+    
+   
+    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+    <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
+       class="example-element-row"
+      >
+    </tr>
+    </table>
+    </div>
+   
+    <!-- <div class="col-xs-12 col-lg-4 col-md-4 col-sm-6 _margin-top" *ngFor="let solution of metaData.solutions">
       <mat-card class="solutionCard col-xs-12">
         <div class=" flex _justify-content-space-between">
           <div class="cardheader">
@@ -39,7 +56,7 @@
             </i>
             <h4>{{solution.title}}</h4>
           </div>
-          <!-- <mat-checkbox class="floatRight" (click)="insertSolution()"></mat-checkbox> -->
+          <mat-checkbox class="floatRight" (click)="insertSolution()"></mat-checkbox>
           <button mat-icon-button class="floatRight" (click)="$event?.stopPropagation();solutionDetails(solution) ">
             <i class="material-icons cardIcon">
                 info
@@ -51,6 +68,6 @@
         </div>
 
       </mat-card>
-    </div>
+    </div> -->
   </mat-card>
 </div>
