added logo upload to meta

--- a/src/app/modules/workspace/add-program/add-program.component.html
+++ b/src/app/modules/workspace/add-program/add-program.component.html
@@ -52,7 +52,7 @@
     <!-- <mat-horizontal-stepper [linear]="!programsForm.valid" #stepper class="stepperHorizontal" *ngIf="showPrograms">
       <mat-step [stepControl]="programsForm"> -->
         <!-- <ng-template matStepLabel>Program Meta Data</ng-template> -->
-<mat-tab-group class="full-height col-xs-12">
+<mat-tab-group class="full-height col-xs-12 _noMarginPadding">
     <mat-tab label="Program Meta">
         <div class="col-sx-12 wrapper">
           <mat-card class="col-xs-12 _margin-top ">
@@ -163,7 +163,7 @@
       <mat-tab label="Add Solutions">
         <div class="col-xs-12 _margin-top _margin-bottom">
 
-            <div class="col-xs-12 _flex-box _flex-end _margin-bottom">
+            <div class="col-xs-12 _flex-box _flex-end _noMarginPadding _margin-bottom " >
                 <button mat-raised-button color="primary" (click)="selectSolution()">
                     Add Solutions
                   </button>
