--- a/src/app/modules/workspace/add-program/add-program.component.scss
+++ b/src/app/modules/workspace/add-program/add-program.component.scss
@@ -139,10 +139,10 @@ table {
   .example-element-description-attribution {
     opacity: 0.5;
   }
- .expandedDetails{
-    border: 1px solid var(--grey-color);
-    border-radius: 5px ;
-    padding: 20px ;
-    margin: 10px 0;
-  }
+//  .expandedDetails{
+    // border: 1px solid var(--grey-color);
+    // border-radius: 5px ;
+    // padding: 20px ;
+    // margin: 10px 0;
+  // }
   
