--- a/src/app/modules/workspace/add-program-meta-data/add-program-meta-data.component.html
+++ b/src/app/modules/workspace/add-program-meta-data/add-program-meta-data.component.html
@@ -19,7 +19,12 @@
             <div class="_margin-top formDiv">
 
                 <app-dynamic-form [genericData]="programMetaData" [genericForm]="programsForm"></app-dynamic-form>
-
+                <app-file-upload-field [genericData]="fileUpload[0]" [genericForm]="fileUploadForm" *ngIf="fileUploadForm" ></app-file-upload-field>
+                {{fileUploadForm?.valid}}
+                <div class="positionBottom _flex-box  _flex-end col-xs-12  _noMarginPadding">
+                    <button mat-raised-button (click)="onSubmit()" color="primary"
+                        [disabled]="!programsForm?.valid">{{'buttons.createPrograms' | translate}}</button>
+                </div>
             </div>
 
 
@@ -54,13 +59,20 @@
 
                     </mat-card>
                 </div>
+                <div class="positionBottom _flex-box  _flex-end col-xs-12 _noMarginPadding">
+                    <!-- <button mat-raised-button (click)="onCopy()" color="primary"
+                     [disabled]="!templateSelected"
+                        >{{'buttons.copyProgram' | translate}}</button> -->
+                        <button mat-raised-button (click)="onSubmit()" color="primary"
+                        >{{'buttons.copyProgram' | translate}}</button>
+                </div>
             </div>
 
         </mat-tab>
 
     </mat-tab-group>
-    <div class="positionBottom _flex-box  _flex-end col-xs-12">
+    <!-- <div class="positionBottom _flex-box  _flex-end col-xs-12">
         <button mat-raised-button (click)="onSubmit()" color="primary"
             [disabled]="!programsForm?.valid">{{'buttons.createPrograms' | translate}}</button>
-    </div>
+    </div> -->
 </div>
