--- a/src/app/modules/workspace/add-program-meta-data/add-program-meta-data.component.scss
+++ b/src/app/modules/workspace/add-program-meta-data/add-program-meta-data.component.scss
@@ -10,22 +10,9 @@
     color: var(--primary-color);
     border: 1px solid var(--primary-color);
 }
-// .mat-tab-body-wrapper{
-//     height: 100% !important;
-//     width: 100%;
-// }
-// .tabGroup{
-//     height: 90%;
-// }
-// .tab{
-//     height: 100%;
-// }
-// mat-tab-body{
-//     height: 100%;
-// }
 .formDiv{
     overflow: auto;
-    height: 400px;
+    min-height: 450px;
 }
 .noWrap {
     white-space: nowrap;
